Remove red boxes

--- a/index.html
+++ b/index.html
@@ -66,22 +66,22 @@
     <!-- Secondary Level Container -2- Benefits section-->
     <section class="container-fluid container-large container-first-section container-callout-dark">
         <div class="row container-wide justify-content-center align-items-center">
-            <div class="col-12 col-md-6 col-lg-12 text-center redbox">
+            <div class="col-12 col-md-6 col-lg-12 text-center ">
                 <h2>Heading</h2>
             </div>
-            <div class="col-md-6 col-lg-4 text-center redbox">
+            <div class="col-md-6 col-lg-4 text-center ">
                 Benefit 1
             </div>
 
-            <div class="col-lg-4 text-center d-none d-lg-block redbox">
+            <div class="col-lg-4 text-center d-none d-lg-block ">
                 Benefit 2
             </div>
 
-            <div class="col-lg-4 text-center d-none d-lg-block redbox">
+            <div class="col-lg-4 text-center d-none d-lg-block ">
                 Benefit 3
             </div>
 
-            <div class="col-12 text-center redbox">
+            <div class="col-12 text-center ">
                 Button
             </div>
         </div>
@@ -94,15 +94,15 @@
     <section class="container-fluid container-wide container-large container-second-section container-callout-light">
         <div class="row justify-content-end">
 
-            <div class="col-md-4 offset-md-8 redbox">
+            <div class="col-md-4 offset-md-8 ">
                 <h2 class="page-heading">Content</h2>
             </div>
 
-            <div class=" col-md-4 offset-md-8 redbox">
+            <div class=" col-md-4 offset-md-8 ">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero laborum molestiae error, doloremque, ipsam dolore voluptatibus repellendus, accusantium beatae iure perferendis, autem impedit maxime est?
             </div>
 
-            <div class="col-md-4 offset-md-8 redbox text-center">
+            <div class="col-md-4 offset-md-8  text-center">
                 <button class="btn btn-success btn-lg">Become Mindful</button>
             </div>
 
@@ -118,20 +118,20 @@
             <div class="col-12">
 
                 <div class="row justify-content-start ">
-                    <div class="col-12 col-md-5 redbox">
+                    <div class="col-12 col-md-5 ">
                         <h2 class="page-heading">Content</h2>
                     </div>
                 </div>
 
                 <div class="row justify-content-start ">
-                    <div class="col-12 col-md-5 text-center redbox">
+                    <div class="col-12 col-md-5 text-center ">
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni non consectetur nesciunt accusantium ipsam sequi iure vero officiis, nemo voluptates aut. Magni, excepturi. Magnam, dolorum?
                     
                     </div>
                 </div>
 
                 <div class="row justify-content-start ">
-                    <div class="col-12 col-md-5 text-center redbox">
+                    <div class="col-12 col-md-5 text-center ">
                         <button class="btn btn-success btn-lg">Experience Mindfulness</button>
                     </div>
                 </div>
