Add basic content and change button text

--- a/index.html
+++ b/index.html
@@ -67,22 +67,22 @@
     <section class="container-fluid container-large container-first-section container-callout-dark">
         <div class="row container-wide justify-content-center align-items-center">
             <div class="col-12 col-md-6 col-lg-12 text-center ">
-                <h2>Heading</h2>
+                <h2>Benefits of Mindful Living</h2>
             </div>
             <div class="col-md-6 col-lg-4 text-center ">
-                Benefit 1
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia dolore iste vel qui tempora numquam!</p>
             </div>
 
             <div class="col-lg-4 text-center d-none d-lg-block ">
-                Benefit 2
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia dolore iste vel qui tempora numquam!</p>
             </div>
 
             <div class="col-lg-4 text-center d-none d-lg-block ">
-                Benefit 3
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia dolore iste vel qui tempora numquam!</p>
             </div>
 
             <div class="col-12 text-center ">
-                Button
+                <button class="btn btn-success btn-lg">Read more</button>
             </div>
         </div>
     </section>
@@ -95,7 +95,7 @@
         <div class="row justify-content-end">
 
             <div class="col-md-4 offset-md-8 ">
-                <h2 class="page-heading">Content</h2>
+                <h2 class="page-heading">Research</h2>
             </div>
 
             <div class=" col-md-4 offset-md-8 ">
@@ -103,7 +103,7 @@
             </div>
 
             <div class="col-md-4 offset-md-8  text-center">
-                <button class="btn btn-success btn-lg">Become Mindful</button>
+                <button class="btn btn-success btn-lg">Read more</button>
             </div>
 
         </div>
@@ -119,7 +119,7 @@
 
                 <div class="row justify-content-start ">
                     <div class="col-12 col-md-5 ">
-                        <h2 class="page-heading">Content</h2>
+                        <h2 class="page-heading">Experience Mindfulness</h2>
                     </div>
                 </div>
 
