Move navbar button position when navbar is collapsed

--- a/index.html
+++ b/index.html
@@ -40,11 +40,14 @@
                 <li class="nav-item nav-padding-lg">
                     <a class="nav-link" href="#">Your Coach</a>
                 </li>
+                <li class="d-lg-none text-center nav-item navbar--padding">
+                    <button class="btn text-center btn-outline-success my-2 my-sm-0 " type="submit">Become Mindful</button>
+                </li>
             </ul>
 
-            <div class="text-right">
-                <button class="btn btn-outline-success my-2 my-sm-0 " type="submit">Become Mindful</button>
-            </div>
+            <!--<div class="text-right d-none d-lg-inline">-->
+            <!--    <button class="btn btn-outline-success my-2 my-sm-0 " type="submit">Become Mindful</button>-->
+            <!--</div>-->
         </div>
     </nav>
 
