--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
                 </li>
             </ul>
 
-            <!--<div class="text-right d-none d-lg-inline">-->
-            <!--    <button class="btn btn-outline-success my-2 my-sm-0 " type="submit">Become Mindful</button>-->
-            <!--</div>-->
+            <div class="text-right d-none d-lg-inline">
+                <button class="btn btn-outline-success my-2 my-sm-0 " type="submit">Become Mindful</button>
+            </div>
         </div>
     </nav>
 
