--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
         <div class="collapse navbar-collapse" id="navbarToggler">
             <ul class="navbar-nav mx-auto mt-2 mt-lg-0">
-                <li class="nav-item nav-padding-lg active">
+                <li class="nav-item nav-padding-lg nav--active">
                     <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item nav-padding-lg">
