--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
         <div class="collapse navbar-collapse" id="navbarToggler">
             <ul class="navbar-nav mx-auto mt-2 mt-lg-0">
-                <li class="nav-item nav-padding-lg nav--active">
+                <li class="nav-item nav-padding-lg nav--active active">
                     <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item nav-padding-lg">
@@ -58,7 +58,7 @@
         <div class="row justify-content-center text-center align-items-end row-large">
             <div class="col-10 col-sm-5 offset-sm-2 offset-md-5">
                 <h1 class="page-heading">After School Mindfulness Classes for 7-11 Year Olds</h1>
-                <h3 class="page-heading">Holmfirth, West Yorkshire</h3>
+                <h3 class="page-heading heading--vspacesm">Holmfirth, West Yorkshire</h3>
                 <button class="btn btn-success btn-lg">Become Mindful</button>
             </div>
         </div>
