--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
         <div class="row justify-content-center text-center align-items-end row-large">
             <div class="col-10 col-sm-5 offset-sm-2 offset-md-5">
                 <h1 class="page-heading">After School Mindfulness Classes for 7-11 Year Olds</h1>
-                <h3 class="page-heading heading--vspacesm">Holmfirth, West Yorkshire</h3>
-                <button class="btn btn-success btn-lg">Become Mindful</button>
+                <h3 class="page-heading ">Holmfirth, West Yorkshire</h3>
+                <button class="btn btn-success btn-lg btn--vspacetop30">Become Mindful</button>
             </div>
         </div>
     </header>
