Add background opacity to main container images

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <div class="col-10 col-sm-5 offset-sm-2 offset-md-5">
                 <h1 class="page-heading">After School Mindfulness Classes for 7-11 Year Olds</h1>
                 <h3 class="page-heading ">Holmfirth, West Yorkshire</h3>
-                <button class="btn btn-success btn-lg btn--vspacetop30">Become Mindful</button>
+                <button class="btn btn-success btn-lg btn--margintop30">Become Mindful</button>
             </div>
         </div>
     </header>
@@ -85,7 +85,7 @@
             </div>
 
             <div class="col-12 text-center ">
-                <button class="btn btn-success btn-lg">Read more</button>
+                <button class="btn btn-success btn-lg btn--margintop30">Read more</button>
             </div>
         </div>
     </section>
@@ -106,7 +106,7 @@
             </div>
 
             <div class="col-md-4 offset-md-8  text-center">
-                <button class="btn btn-success btn-lg">Read more</button>
+                <button class="btn btn-success btn-lg btn--margintop30">Read more</button>
             </div>
 
         </div>
@@ -135,7 +135,7 @@
 
                 <div class="row justify-content-start ">
                     <div class="col-12 col-md-5 text-center ">
-                        <button class="btn btn-success btn-lg">Experience Mindfulness</button>
+                        <button class="btn btn-success btn-lg btn--margintop30">Experience Mindfulness</button>
                     </div>
                 </div>
             </div>
