--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
     <!-- /Header section-->
     <main>
     <!-- Secondary Level Container -2- Benefits section-->
-    <section class="container-fluid container-large container-first-section container-callout-dark">
-        <div class="row container-wide justify-content-center align-items-center">
+    <section class="container-fluid  container-first-section container-callout-dark">
+        <div class="row container-wide justify-content-center align-items-center container--translucent container--topbottom20">
             <div class="col-12 col-md-6 col-lg-12 text-center ">
                 <h2>Benefits of Mindful Living</h2>
             </div>
@@ -94,7 +94,7 @@
     
     <!-- Secondary Level Container -3- Right Aligned - Facts section-->
 
-    <section class="container-fluid container-wide container-large container-second-section container-callout-light">
+    <section class="container-fluid container-wide  container-second-section container-callout-light">
         <div class="row justify-content-end">
 
             <div class="col-md-4 offset-md-8 ">
@@ -116,7 +116,7 @@
 
     <!-- Secondary Level Container -4- left aligned - Experience section-->
 
-    <section class="container-fluid container-wide container-third-section container-large container-callout-dark">
+    <section class="container-fluid container-wide container-third-section  container-callout-dark">
         <div class="row align-items-center">
             <div class="col-12">
 
