Add transulcent boxes behind text content

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <!-- Secondary Level Container -3- Right Aligned - Facts section-->
 
     <section class="container-fluid container-wide  container-second-section container-callout-light">
-        <div class="row justify-content-end">
+        <div class="row justify-content-end container--translucentgradientleft container--topbottom20">
 
             <div class="col-md-4 offset-md-8 ">
                 <h2 class="page-heading">Research</h2>
@@ -117,7 +117,7 @@
     <!-- Secondary Level Container -4- left aligned - Experience section-->
 
     <section class="container-fluid container-wide container-third-section  container-callout-dark">
-        <div class="row align-items-center">
+        <div class="row align-items-center container--translucentgradientright container--topbottom20">
             <div class="col-12">
 
                 <div class="row justify-content-start ">
