Update sample content for index.html

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
     </nav>
 
     <!-- /Navbar -->
+    
     <!-- Header section-->
 
     <header class="container-fluid container-large-top">
@@ -72,16 +73,16 @@
             <div class="col-12 col-md-6 col-lg-12 text-center ">
                 <h2>Benefits of Mindful Living</h2>
             </div>
-            <div class="col-md-6 col-lg-4 text-center ">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia dolore iste vel qui tempora numquam!</p>
+            <div class="col-md-6 col-lg-4 text-center container--topbottom20 ">
+                <p>Mindfulness can help your child become more happy and content.</p>
             </div>
 
             <div class="col-lg-4 text-center d-none d-lg-block ">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia dolore iste vel qui tempora numquam!</p>
+                <p>Reduced stress can lead to more emotional understanding, stability and better relationships.</p>
             </div>
 
             <div class="col-lg-4 text-center d-none d-lg-block ">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia dolore iste vel qui tempora numquam!</p>
+                <p>Regular mindfulness practice can lead to improved concentration and memory.</p>
             </div>
 
             <div class="col-12 text-center ">
@@ -102,11 +103,12 @@
             </div>
 
             <div class=" col-md-4 offset-md-8 ">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero laborum molestiae error, doloremque, ipsam dolore voluptatibus repellendus, accusantium beatae iure perferendis, autem impedit maxime est?
+                Techniques from Calm Little Stars are based on the principles of Mindfulness Based Stress Reduction. Download our research paper now to read the 
+                research evidence behind why mindfulness is safe and beneficial for your child.
             </div>
 
             <div class="col-md-4 offset-md-8  text-center">
-                <button class="btn btn-success btn-lg btn--margintop30">Read more</button>
+                <button class="btn btn-success btn-lg btn--margintop30">Download</button>
             </div>
 
         </div>
@@ -128,7 +130,8 @@
 
                 <div class="row justify-content-start ">
                     <div class="col-12 col-md-5 text-center ">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni non consectetur nesciunt accusantium ipsam sequi iure vero officiis, nemo voluptates aut. Magni, excepturi. Magnam, dolorum?
+                         Mindfulness is more than just learning to meditate. It is a way of life. It is learning to still ourselves and develop a calm 
+                         attitude of contemplative awarenesss which we bring with us throughout everyday life. Experience Mindfulness now through audio or video.
                     
                     </div>
                 </div>
