Create sub pages and update active link signifier

--- a/coach.html
+++ b/coach.html
@@ -19,8 +19,8 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarToggler">
             <ul class="navbar-nav mx-auto mt-2 mt-lg-0">
-                <li class="nav-item nav-padding-lg nav--active active">
-                    <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                <li class="nav-item nav-padding-lg">
+                    <a class="nav-link" href="index.html">Home</a>
                 </li>
                 <li class="nav-item nav-padding-lg">
                     <a class="nav-link" href="benefits.html">Benefits</a>
@@ -34,8 +34,8 @@
                 <li class="nav-item nav-padding-lg">
                     <a class="nav-link" href="classes.html">Classes</a>
                 </li>
-                <li class="nav-item nav-padding-lg">
-                    <a class="nav-link" href="coach.html">Your Coach</a>
+                <li class="nav-item nav-padding-lg nav--active active">
+                    <a class="nav-link" href="coach.html">Your Coach <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="d-lg-none text-center nav-item navbar--padding">
                     <button class="btn text-center btn-outline-success my-2 my-sm-0 " type="submit">Become Mindful</button>
