--- a/experience.html
+++ b/experience.html
@@ -19,8 +19,8 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarToggler">
             <ul class="navbar-nav mx-auto mt-2 mt-lg-0">
-                <li class="nav-item nav-padding-lg nav--active active">
-                    <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                <li class="nav-item nav-padding-lg">
+                    <a class="nav-link" href="index.html">Home</a>
                 </li>
                 <li class="nav-item nav-padding-lg">
                     <a class="nav-link" href="benefits.html">Benefits</a>
@@ -28,8 +28,8 @@
                 <li class="nav-item nav-padding-lg">
                     <a class="nav-link" href="facts.html">Facts</a>
                 </li>
-                <li class="nav-item nav-padding-lg">
-                    <a class="nav-link" href="experience.html">Experience</a>
+                <li class="nav-item nav-padding-lg nav--active active">
+                    <a class="nav-link" href="experience.html">Experience <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item nav-padding-lg">
                     <a class="nav-link" href="classes.html">Classes</a>
