--- a/experience.html
+++ b/experience.html
@@ -55,10 +55,10 @@
                 <div class="col-12 col-md-6 col-lg-12 text-center ">
                     <h2>Experience Mindfulness</h2>
                 </div>
-                <div class="col-12 text-center container--topbottom20 ">
-                    <div class="embed-responsive embed-responsive-16by9">
+                <div class="col-12 text-center container--topbottom20 embed-responsive embed-responsive-16by9">
+                    
   <iframe class="embed-responsive-item" src="https://www.youtube.com/watch?v=qFZKK7K52uQ" allowfullscreen></iframe>
-</div>
+
                 </div>
 
                 
