Add video and larger h2 to experience.html

--- a/experience.html
+++ b/experience.html
@@ -49,22 +49,24 @@
     <!-- /Navbar -->
 
     <main>
-        <!-- Secondary Level Container -2- Benefits section-->
-        <section class="container-fluid  container-first-section container-callout-dark">
+        <!-- Secondary Level Container -2- Video-->
+        <section class="container-fluid  container-first-section-subpage container-callout-dark">
             <div class="row container-wide justify-content-center align-items-center container--translucent container--topbottom20">
                 <div class="col-12 col-md-6 col-lg-12 text-center ">
-                    <h2>Experience Mindfulness</h2>
+                    <h2 class="heading--5em">Experience Mindfulness</h2>
                 </div>
                 <div class="col-12 text-center container--topbottom20 embed-responsive embed-responsive-16by9">
                     
-  <iframe class="embed-responsive-item" src="https://www.youtube.com/watch?v=qFZKK7K52uQ" allowfullscreen></iframe>
+  <!--<iframe class="embed-responsive-item" src="https://www.youtube.com/watch?v=qFZKK7K52uQ" allowfullscreen></iframe>-->
+  
+  <iframe class="embed-reponsive-frame" src="https://www.youtube.com/embed/qFZKK7K52uQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
 
                 </div>
 
                 
             </div>
         </section>
-        <!-- /Secondary Level Container -2- Benefits section-->
+        <!-- /Secondary Level Container -2- Video-->
 
     </main>
     <!-- Footer-->
