Update <title> tags and reduce font weights loaded

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Raleway:300,400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
-    <title>Calm Little Stars</title>
+    <title>Calm Little Stars - Home</title>
 </head>
 <body>
     <!-- Navbar -->
@@ -62,17 +62,17 @@
         <!-- Secondary Level Container -2- Benefits section-->
         <section class="container-fluid  container-first-section container--topbottom150 container-callout-dark">
             <div class="row container-wide justify-content-center align-items-center container--translucent container--topbottom20">
-                <div class="col-12 col-md-6 col-lg-12 text-center ">
+                <div class="col-12 col-md-6 col-lg-12 text-center">
                     <h2>Benefits of Mindful Living</h2>
                 </div>
-                <div class="col-md-6 col-lg-4 text-center container--topbottom20 ">
+                <div class="col-md-6 col-lg-4 text-center container--topbottom20">
                     <p>Mindfulness can help your child become more happy and content.</p>
                 </div>
 
-                <div class="col-lg-4 text-center d-none d-lg-block ">
+                <div class="col-lg-4 text-center d-none d-lg-block">
                     <p>Reduced stress can lead to more emotional understanding, stability and better relationships.</p>
                 </div>
-                <div class="col-lg-4 text-center d-none d-lg-block ">
+                <div class="col-lg-4 text-center d-none d-lg-block">
                     <p>Regular mindfulness practice can lead to improved concentration and memory.</p>
                 </div>
                 <div class="col-12 text-center ">
@@ -84,13 +84,13 @@
         <!-- Secondary Level Container -3- Right Aligned - Facts section-->
         <section class="container-fluid container-wide  container-second-section container-callout-light">
             <div class="row justify-content-end container--translucentgradientleft container--topbottom20">
-                <div class="col-md-4 offset-md-8 ">
+                <div class="col-md-4 offset-md-8">
                     <h2 class="page-heading">Research</h2>
                 </div>
-                <div class=" col-md-4 offset-md-8 ">
+                <div class="col-md-4 offset-md-8">
                     Techniques from Calm Little Stars are based on the principles of Mindfulness Based Stress Reduction. Download our research paper now to read the research evidence behind why mindfulness is safe and beneficial for your child.
                 </div>
-                <div class="col-md-4 offset-md-8  text-center">
+                <div class="col-md-4 offset-md-8 text-center">
                     <button class="btn btn-success btn-lg btn--margintop30">Download</button>
                 </div>
             </div>
