--- a/coach.html
+++ b/coach.html
@@ -88,10 +88,10 @@
                     <h2 class="page-heading">Research</h2>
                 </div>
                 <div class=" col-md-4 offset-md-8">
-                    Techniques from Calm Little Stars are based on the principles of Mindfulness Based Stress Reduction. Download our research paper now to read the research evidence behind why mindfulness is safe and beneficial for your child.
+                    <p>Techniques from Calm Little Stars are based on the principles of Mindfulness Based Stress Reduction. Download our research paper now to read the research evidence behind why mindfulness is safe and beneficial for your child.</p>
                 </div>
                 <div class="col-md-4 offset-md-8  text-center">
-                    <button class="btn btn-success btn-lg btn--margintop30">Download</button>
+                    <button class="btn btn-success btn-lg">Download</button>
                 </div>
             </div>
         </section>
@@ -107,13 +107,13 @@
                     </div>
                     <div class="row justify-content-start">
                         <div class="col-12 col-md-5 text-center">
-                            Mindfulness is more than just learning to meditate. It is a way of life. It is learning to still ourselves and develop a calm attitude of contemplative awarenesss which we bring with us throughout everyday life. Experience Mindfulness now through audio
-                            or video.
+                            <p>Mindfulness is more than just learning to meditate. It is a way of life. It is learning to still ourselves and develop a calm attitude of contemplative awarenesss which we bring with us throughout everyday life. Experience Mindfulness now through audio
+                            or video.</p>
                         </div>
                     </div>
                     <div class="row justify-content-start">
                         <div class="col-12 col-md-5 text-center">
-                            <button class="btn btn-success btn-lg btn--margintop30">Experience Mindfulness</button>
+                            <button class="btn btn-success btn-lg">Experience Mindfulness</button>
                         </div>
                     </div>
                 </div>
