Remove background from experience.html to declutter the screen

--- a/index.html
+++ b/index.html
@@ -125,13 +125,11 @@
     <footer class="container-fluid container-footer container-callout-dark">
         <div class="row container-small align-items-center justify-content-center">
             <div class="col-sm-6 text-center">
-                <form >
+                <form>
                     <div class="footer-item">
                         <label class="sr-only" for="email">Enter your email address </label>
-                        <input type="email" class="form-control input--text footer-item" placeholder="Enter email address">
-                    </div>
-                    <div class="footer-item">
-                        <button type="submit" id="btn--footer" class="btn btn-success btn-lg">Mindful News</button>
+                        <input type="email" class="form-control footer-item input--text" placeholder="Enter email address">
+                        <button type="submit" id="btn--footer" class="footer-item btn btn-success btn-lg">Mindful News</button>
                     </div>
                 </form>
                 <div class="footer-item">
