--- a/experience.html
+++ b/experience.html
@@ -50,7 +50,7 @@
 
     <main>
         <!-- Secondary Level Container -2- Video-->
-        <section class="container-fluid container-first-section container--topbottom75 container-callout-dark">
+        <section class="container-fluid container-first-section-experience container--topbottom75 container-callout-dark">
             <div class="row container-wide justify-content-center align-items-center container--translucent container--topbottom20">
                 <div class="col-12 col-md-6 col-lg-12 text-center">
                     <h2 class="heading--5em">Experience Mindfulness</h2>
