Add colour to navbar-light background

--- a/index.html
+++ b/index.html
@@ -124,9 +124,9 @@
     <!-- Footer-->
     <footer class="container-fluid container-footer container-callout-dark">
         <div class="row container-small align-items-center justify-content-center">
-            <div class="col-sm-6 text-center">
+            <div class="col-sm-8 text-center">
                 <form>
-                    <div class="footer-item">
+                    <div>
                         <label class="sr-only" for="email">Enter your email address </label>
                         <input type="email" class="form-control footer-item input--text" placeholder="Enter email address">
                         <button type="submit" id="btn--footer" class="footer-item btn btn-success btn-lg">Mindful News</button>
