--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <!-- /Header section-->
     <main>
         <!-- Secondary Level Container -2- Benefits section-->
-        <section class="container-fluid container-first-section container--topbottom150 container-callout-dark">
+        <section class="container-fluid container-first-section container--top300 container-callout-dark">
             <div class="row container-wide justify-content-center align-items-center container--translucent container--topbottom20">
                 <div class="col-12 col-md-6 col-lg-12 text-center">
                     <h2>Benefits of Mindful Living</h2>
@@ -123,7 +123,7 @@
     </main>
     <!-- Footer-->
     <footer class="container-fluid container-footer container-callout-dark">
-        <div class="row container-small align-items-center justify-content-center">
+        <div class="row align-items-center justify-content-center">
             <div class="col-sm-8 text-center">
                 <form>
                     <div>
