--- a/facts.html
+++ b/facts.html
@@ -122,16 +122,15 @@
         <!-- / Secondary Level Container -4- left aligned - Experience section-->
     </main>
     <!-- Footer-->
+       <!-- Footer-->
     <footer class="container-fluid container-footer container-callout-dark">
-        <div class="row container-small align-items-center justify-content-center">
-            <div class="col-8 col-sm-6 text-center">
+        <div class="row align-items-center justify-content-center">
+            <div class="col-sm-8 text-center">
                 <form>
-                    <div class="footer-item">
+                    <div>
                         <label class="sr-only" for="email">Enter your email address </label>
-                        <input type="email" class="form-control input--text footer-item" placeholder="Enter email address">
-                    </div>
-                    <div class="footer-item">
-                        <button type="submit" id="btn--footer" class="btn btn-success btn-lg">Mindful News</button>
+                        <input type="email" class="form-control footer-item input--text" placeholder="Enter email address">
+                        <button type="submit" id="btn--footer" class="footer-item btn btn-success btn-lg">Mindful News</button>
                     </div>
                 </form>
                 <div class="footer-item">
@@ -153,6 +152,8 @@
             </div>
         </div>
     </footer>
+
+    <!-- / Footer-->
 
     <!-- / Footer-->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
