--- a/benefits.html
+++ b/benefits.html
@@ -47,56 +47,7 @@
         </div>
     </nav>
     <!-- /Navbar -->
-    <!-- Header section-->
-    <header class="container-fluid container-large-top">
-        <div class="row justify-content-center text-center align-items-end row-large">
-            <div class="col-10 col-sm-5 offset-sm-2 offset-md-5">
-                <h1 class="page-heading">After School Mindfulness Classes for 7-11 Year Olds</h1>
-                <h3 class="page-heading">Holmfirth, West Yorkshire</h3>
-                <button class="btn btn-success btn-lg btn--margintop30">Become Mindful</button>
-            </div>
-        </div>
-    </header>
-    <!-- /Header section-->
-    <main>
-        <!-- Secondary Level Container -2- Benefits section-->
-        <section class="container-fluid container-first-section container-callout-dark">
-            <div class="row container-wide justify-content-center align-items-center container--translucent container--topbottom20">
-                <div class="col-12 col-md-6 col-lg-12 text-center">
-                    <h2>Benefits of Mindful Living</h2>
-                </div>
-                <div class="col-md-6 col-lg-4 text-center container--topbottom20">
-                    <p>Mindfulness can help your child become more happy and content.</p>
-                </div>
-
-                <div class="col-lg-4 text-center d-none d-lg-block">
-                    <p>Reduced stress can lead to more emotional understanding, stability and better relationships.</p>
-                </div>
-                <div class="col-lg-4 text-center d-none d-lg-block">
-                    <p>Regular mindfulness practice can lead to improved concentration and memory.</p>
-                </div>
-                <div class="col-12 text-center">
-                    <button class="btn btn-success btn-lg btn--margintop30">Read more</button>
-                </div>
-            </div>
-        </section>
-        <!-- /Secondary Level Container -2- Benefits section-->
-        <!-- Secondary Level Container -3- Right Aligned - Facts section-->
-        <section class="container-fluid container-wide container-second-section container-callout-light">
-            <div class="row justify-content-end container--translucentgradientleft container--topbottom20">
-                <div class="col-md-4 offset-md-8">
-                    <h2 class="page-heading">Research</h2>
-                </div>
-                <div class=" col-md-4 offset-md-8">
-                    <p>Techniques from Calm Little Stars are based on the principles of Mindfulness Based Stress Reduction. Download our research paper now to read the research evidence behind why mindfulness is safe and beneficial for your child.</p>
-                </div>
-                <div class="col-md-4 offset-md-8  text-center">
-                    <button class="btn btn-success btn-lg">Download</button>
-                </div>
-            </div>
-        </section>
-        <!-- /Secondary Level Container -3- Right Aligned - Facts section-->
-        <!-- Secondary Level Container -4- left aligned - Experience section-->
+        <!-- Header-->
         <section class="container-fluid container-wide container-third-section container-callout-dark">
             <div class="row align-items-center container--translucentgradientright container--topbottom20">
                 <div class="col-12">
@@ -111,15 +62,43 @@
                             or video.</p>
                         </div>
                     </div>
+                </div>
+            </div>
+        </section>
+        <!-- / Header-->
+    <main>
+
+        <!-- Secondary Level Container -2- Right Aligned - Facts section-->
+        <section class="container-fluid container-wide container-second-section container-callout-light">
+            <div class="row justify-content-end container--translucentgradientleft container--topbottom20">
+                <div class="col-md-4 offset-md-8">
+                    <h2 class="page-heading">Research</h2>
+                </div>
+                <div class=" col-md-4 offset-md-8">
+                    <p>Techniques from Calm Little Stars are based on the principles of Mindfulness Based Stress Reduction. Download our research paper now to read the research evidence behind why mindfulness is safe and beneficial for your child.</p>
+                </div>
+            </div>
+        </section>
+        <!-- /Secondary Level Container -2- Right Aligned - Facts section-->
+        <!-- Secondary Level Container -3- left aligned - Experience section-->
+        <section class="container-fluid container-wide container-third-section container-callout-dark">
+            <div class="row align-items-center container--translucentgradientright container--topbottom20">
+                <div class="col-12">
+                    <div class="row justify-content-start">
+                        <div class="col-12 col-md-5">
+                            <h1 class="page-heading">Experience Mindfulness</h2>
+                        </div>
+                    </div>
                     <div class="row justify-content-start">
                         <div class="col-12 col-md-5 text-center">
-                            <button class="btn btn-success btn-lg">Experience Mindfulness</button>
+                            <p>Mindfulness is more than just learning to meditate. It is a way of life. It is learning to still ourselves and develop a calm attitude of contemplative awarenesss which we bring with us throughout everyday life. Experience Mindfulness now through audio
+                            or video.</p>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
-        <!-- / Secondary Level Container -4- left aligned - Experience section-->
+        <!-- / Secondary Level Container -3- left aligned - Experience section-->
     </main>
     <!-- Footer-->
         <!-- Footer-->
