Reposition containers on benefits.html for small screens

--- a/benefits.html
+++ b/benefits.html
@@ -48,7 +48,7 @@
     </nav>
     <!-- /Navbar -->
         <!-- Header-->
-        <section class="container-fluid container-wide container-third-section container-callout-dark">
+        <section class="container-fluid container-wide container-first-section-benefits container--padding300--bottom-sm-middle-md container-callout-dark">
             <div class="row align-items-center container--translucentgradientright container--topbottom20">
                 <div class="col-12">
                     <div class="row justify-content-start">
@@ -69,7 +69,7 @@
     <main>
 
         <!-- Secondary Level Container -2- Right Aligned - Facts section-->
-        <section class="container-fluid container-wide container-second-section container-callout-light">
+        <section class="container-fluid container-wide container-second-section-benefits container--padding300--bottom-sm-middle-md container-callout-light">
             <div class="row justify-content-end container--translucentgradientleft container--topbottom20">
                 <div class="col-md-4 offset-md-8">
                     <h2 class="page-heading">Research</h2>
@@ -81,7 +81,7 @@
         </section>
         <!-- /Secondary Level Container -2- Right Aligned - Facts section-->
         <!-- Secondary Level Container -3- left aligned - Experience section-->
-        <section class="container-fluid container-wide container-third-section container-callout-dark">
+        <section class="container-fluid container-wide container-third-section-benefits container--padding300--bottom-sm-middle-md container-callout-dark">
             <div class="row align-items-center container--translucentgradientright container--topbottom20">
                 <div class="col-12">
                     <div class="row justify-content-start">
