Add content to benefits.html

--- a/benefits.html
+++ b/benefits.html
@@ -53,13 +53,12 @@
                 <div class="col-12">
                     <div class="row justify-content-start">
                         <div class="col-12 col-md-5">
-                            <h1 class="page-heading">Experience Mindfulness</h2>
+                            <h1 class="page-heading">Mindfulness Strengthens Self Control</h2>
                         </div>
                     </div>
                     <div class="row justify-content-start">
                         <div class="col-12 col-md-5 text-center">
-                            <p>Mindfulness is more than just learning to meditate. It is a way of life. It is learning to still ourselves and develop a calm attitude of contemplative awarenesss which we bring with us throughout everyday life. Experience Mindfulness now through audio
-                            or video.</p>
+                            <p>Mindfulness is about waking up and learning to focus the attention. Children are trained to identify when they are distracted, and then gently re-focus their attention.</p>
                         </div>
                     </div>
                 </div>
@@ -72,10 +71,11 @@
         <section class="container-fluid container-wide container-second-section-benefits container--padding300--bottom-sm-middle-md container-callout-light">
             <div class="row justify-content-end container--translucentgradientleft container--topbottom20">
                 <div class="col-md-4 offset-md-8">
-                    <h2 class="page-heading">Research</h2>
+                    <h2 class="page-heading">Replace anxiety with calm</h2>
                 </div>
                 <div class=" col-md-4 offset-md-8">
-                    <p>Techniques from Calm Little Stars are based on the principles of Mindfulness Based Stress Reduction. Download our research paper now to read the research evidence behind why mindfulness is safe and beneficial for your child.</p>
+                    <p>Mindfulness teaches children to focus on the body, the breath and also to become more aware of their surroundings.
+                    As well as awareness, children learn acceptance and self compassion. This develops a sense of inner peace.</p>
                 </div>
             </div>
         </section>
