Add video to benefits.html and make align container centrally

--- a/benefits.html
+++ b/benefits.html
@@ -81,18 +81,19 @@
         </section>
         <!-- /Secondary Level Container -2- Right Aligned - Facts section-->
         <!-- Secondary Level Container -3- left aligned - Experience section-->
-        <section class="container-fluid container-wide container-third-section-benefits container--padding300--bottom-sm-middle-md container-callout-dark">
-            <div class="row align-items-center container--translucentgradientright container--topbottom20">
+        <section class="container-fluid container-wide container-third-section-benefits container--topbottom150 container-callout-dark">
+            <div class="row align-items-center container--translucentrounded container--topbottom20">
                 <div class="col-12">
                     <div class="row justify-content-start">
-                        <div class="col-12 col-md-5">
-                            <h1 class="page-heading">Experience Mindfulness</h2>
+                        <div class="col-12">
+                            <h1 class="page-heading">Mindfulness can be explained easily to children</h2>
                         </div>
                     </div>
                     <div class="row justify-content-start">
-                        <div class="col-12 col-md-5 text-center">
-                            <p>Mindfulness is more than just learning to meditate. It is a way of life. It is learning to still ourselves and develop a calm attitude of contemplative awarenesss which we bring with us throughout everyday life. Experience Mindfulness now through audio
-                            or video.</p>
+                        <div class="col-12 text-center videosize embed-responsive embed-responsive-16by9">
+                            <iframe class="embed-responsive-frame" src="https://www.youtube.com/embed/vzKryaN44ss" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <!--<iframe class="embed-reponsive-frame" src="https://www.youtube.com/embed/qFZKK7K52uQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>-->
+
                         </div>
                     </div>
                 </div>
