Add content to facts.html

--- a/benefits.html
+++ b/benefits.html
@@ -81,12 +81,12 @@
         </section>
         <!-- /Secondary Level Container -2- Right Aligned - Facts section-->
         <!-- Secondary Level Container -3- left aligned - Experience section-->
-        <section class="container-fluid container-wide container-third-section-benefits container--topbottom150 container-callout-dark">
+        <section class="container-fluid container-wide container-third-section-benefits container--topbottom75 container-callout-dark">
             <div class="row align-items-center container--translucentrounded container--topbottom20">
                 <div class="col-12">
                     <div class="row justify-content-start">
                         <div class="col-12">
-                            <h1 class="page-heading">Mindfulness can be explained easily to children</h2>
+                            <h1 class="page-heading headingspace">Mindfulness can be explained easily to children</h2>
                         </div>
                     </div>
                     <div class="row justify-content-start">
