--- a/facts.html
+++ b/facts.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=Raleway:300,400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
-    <title>Calm Little Stars - Facts</title>
+    <title>Calm Little Stars - Benefits</title>
 </head>
+
 <body>
     <!-- Navbar -->
     <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
@@ -22,11 +24,11 @@
                 <li class="nav-item nav-padding-lg">
                     <a class="nav-link" href="index.html">Home</a>
                 </li>
-                <li class="nav-item nav-padding-lg">
-                    <a class="nav-link" href="benefits.html">Benefits</a>
-                </li>
                 <li class="nav-item nav-padding-lg nav--active active">
-                    <a class="nav-link" href="facts.html">Facts <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="benefits.html">Benefits <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item nav-padding-lg">
+                    <a class="nav-link" href="facts.html">Facts</a>
                 </li>
                 <li class="nav-item nav-padding-lg">
                     <a class="nav-link" href="experience.html">Experience</a>
@@ -47,82 +49,52 @@
         </div>
     </nav>
     <!-- /Navbar -->
-    <!-- Header section-->
-    <header class="container-fluid container-large-top">
-        <div class="row justify-content-center text-center align-items-end row-large">
-            <div class="col-10 col-sm-5 offset-sm-2 offset-md-5">
-                <h1 class="page-heading">After School Mindfulness Classes for 7-11 Year Olds</h1>
-                <h3 class="page-heading">Holmfirth, West Yorkshire</h3>
-                <button class="btn btn-success btn-lg btn--margintop30">Become Mindful</button>
+    <!-- Header-->
+    <section class="container-fluid container-wide container-first-section-benefits container--padding300--bottom-sm-middle-md container-callout-dark">
+        <div class="row align-items-center container--translucentgradientright container--topbottom20">
+            <div class="col-12">
+                <div class="row justify-content-start">
+                    <div class="col-12 col-md-5">
+                        <blockquote class="blockquote text-right">
+                            <p class="mb-0">(Mindfulness is) paying attention in a particular way: on purpose, in the present moment and non-judgmentally</p>
+                            <footer class="blockquote-footer">John Kabat Zinn, scientist, in <br><cite title="Full Catastrophe Living">Full Catastrophe Living</cite></footer>
+                        </blockquote>
+                    </div>
+                </div>
             </div>
         </div>
-    </header>
-    <!-- /Header section-->
+    </section>
+    <!-- / Header-->
     <main>
-        <!-- Secondary Level Container -2- Benefits section-->
-        <section class="container-fluid container-first-section container-callout-dark">
-            <div class="row container-wide justify-content-center align-items-center container--translucent container--topbottom20">
-                <div class="col-12 col-md-6 col-lg-12 text-center">
-                    <h2>Benefits of Mindful Living</h2>
-                </div>
-                <div class="col-md-6 col-lg-4 text-center container--topbottom20">
-                    <p>Mindfulness can help your child become more happy and content.</p>
-                </div>
 
-                <div class="col-lg-4 text-center d-none d-lg-block">
-                    <p>Reduced stress can lead to more emotional understanding, stability and better relationships.</p>
-                </div>
-                <div class="col-lg-4 text-center d-none d-lg-block">
-                    <p>Regular mindfulness practice can lead to improved concentration and memory.</p>
-                </div>
-                <div class="col-12 text-center">
-                    <button class="btn btn-success btn-lg btn--margintop30">Read more</button>
-                </div>
-            </div>
-        </section>
-        <!-- /Secondary Level Container -2- Benefits section-->
-        <!-- Secondary Level Container -3- Right Aligned - Facts section-->
-        <section class="container-fluid container-wide container-second-section container-callout-light">
+        <!-- Secondary Level Container -2- Right Aligned - Facts section-->
+        <section class="container-fluid container-wide container-second-section-benefits container--padding300--bottom-sm-middle-md container-callout-light">
             <div class="row justify-content-end container--translucentgradientleft container--topbottom20">
                 <div class="col-md-4 offset-md-8">
-                    <h2 class="page-heading">Research</h2>
-                </div>
-                <div class=" col-md-4 offset-md-8">
-                    <p>Techniques from Calm Little Stars are based on the principles of Mindfulness Based Stress Reduction. Download our research paper now to read the research evidence behind why mindfulness is safe and beneficial for your child.</p>
-                </div>
-                <div class="col-md-4 offset-md-8  text-center">
-                    <button class="btn btn-success btn-lg">Download</button>
+                    <blockquote class="blockquote text-right">
+                        <p class="mb-0">(Mindfulness) helps you step back and look at that thought as just a thought, as opposed to a reality</p>
+                        <footer class="blockquote-footer">Dr Allison Baker in <br><cite title="Child Mind Institute">Child Mind Institute</cite></footer>
+                    </blockquote>
                 </div>
             </div>
         </section>
-        <!-- /Secondary Level Container -3- Right Aligned - Facts section-->
-        <!-- Secondary Level Container -4- left aligned - Experience section-->
-        <section class="container-fluid container-wide container-third-section  container-callout-dark">
+        <!-- /Secondary Level Container -2- Right Aligned - Facts section-->
+        <!-- Secondary Level Container -3- left aligned - Experience section-->
+        <section class="container-fluid container-wide container-first-section-benefits container--padding300--bottom-sm-middle-md container-callout-dark">
             <div class="row align-items-center container--translucentgradientright container--topbottom20">
                 <div class="col-12">
                     <div class="row justify-content-start">
                         <div class="col-12 col-md-5">
-                            <h2 class="page-heading">Experience Mindfulness</h2>
-                        </div>
-                    </div>
-                    <div class="row justify-content-start">
-                        <div class="col-12 col-md-5 text-center">
-                            <p>Mindfulness is more than just learning to meditate. It is a way of life. It is learning to still ourselves and develop a calm attitude of contemplative awarenesss which we bring with us throughout everyday life. Experience Mindfulness now through audio
-                            or video.</p>
-                        </div>
-                    </div>
-                    <div class="row justify-content-start">
-                        <div class="col-12 col-md-5 text-center">
-                            <button class="btn btn-success btn-lg">Experience Mindfulness</button>
+                            <h1>Download Research</h1>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
-        <!-- / Secondary Level Container -4- left aligned - Experience section-->
+        <!-- / Secondary Level Container -3- left aligned - Experience section-->
     </main>
     <!-- Footer-->
-       <!-- Footer-->
+    <!-- Footer-->
     <footer class="container-fluid container-footer container-callout-dark">
         <div class="row align-items-center justify-content-center">
             <div class="col-sm-8 text-center">
