Add contact to Classes page

--- a/benefits.html
+++ b/benefits.html
@@ -47,7 +47,17 @@
         </div>
     </nav>
     <!-- /Navbar -->
-        <!-- Header-->
+        <!-- Header -->
+    <header class="container-fluid container-first-section-experience container-callout-dark">
+        <div class="row container-wide justify-content-center align-items-center container--translucent container--topbottom20">
+            <div class="col-12 col-md-6 col-lg-12 text-center">
+                <h1 class="heading--5em heading--topspace">Benefits</h2>
+            </div>
+        </div>
+    </header>
+    <!-- /Header -->
+    <main>
+        <!-- Benefit1-->
         <section class="container-fluid container-wide container-first-section-benefits container--padding300--bottom-sm-middle-md container-callout-dark">
             <div class="row align-items-center container--translucentgradientright container--topbottom20">
                 <div class="col-12">
@@ -64,9 +74,7 @@
                 </div>
             </div>
         </section>
-        <!-- / Header-->
-    <main>
-
+        <!-- / Benefit1-->
         <!-- Secondary Level Container -2- Right Aligned - Facts section-->
         <section class="container-fluid container-wide container-second-section-benefits container--padding300--bottom-sm-middle-md container-callout-light">
             <div class="row justify-content-end container--translucentgradientleft container--topbottom20">
@@ -80,7 +88,7 @@
             </div>
         </section>
         <!-- /Secondary Level Container -2- Right Aligned - Facts section-->
-        <!-- Secondary Level Container -3- left aligned - Experience section-->
+        <!-- Secondary Level Container -3- Centre aligned - Video section-->
         <section class="container-fluid container-wide container-third-section-benefits container--topbottom75 container-callout-dark">
             <div class="row align-items-center container--translucentrounded container--topbottom20">
                 <div class="col-12">
@@ -92,14 +100,12 @@
                     <div class="row justify-content-start">
                         <div class="col-12 text-center videosize embed-responsive embed-responsive-16by9">
                             <iframe class="embed-responsive-frame" src="https://www.youtube.com/embed/vzKryaN44ss" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                        <!--<iframe class="embed-reponsive-frame" src="https://www.youtube.com/embed/qFZKK7K52uQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>-->
-
                         </div>
                     </div>
                 </div>
             </div>
         </section>
-        <!-- / Secondary Level Container -3- left aligned - Experience section-->
+        <!-- / Secondary Level Container -3- Centre aligned - Video section-->
     </main>
     <!-- Footer-->
         <!-- Footer-->
