--- a/facts.html
+++ b/facts.html
@@ -49,7 +49,17 @@
         </div>
     </nav>
     <!-- /Navbar -->
-    <!-- Header-->
+    <!-- Header -->
+    <header class="container-fluid container-first-section-experience container-callout-dark">
+        <div class="row container-wide justify-content-center align-items-center container--translucent container--topbottom20">
+            <div class="col-12 col-md-6 col-lg-12 text-center">
+                <h1 class="heading--5em heading--topspace">Facts</h2>
+            </div>
+        </div>
+    </header>
+    <!-- /Header -->
+    <main>
+    <!-- Top Quote-->
     <section class="container-fluid container-wide container-first-section-benefits container--padding300--bottom-sm-middle-md container-callout-dark">
         <div class="row align-items-center container--translucentgradientright container--topbottom20">
             <div class="col-12">
@@ -64,8 +74,7 @@
             </div>
         </div>
     </section>
-    <!-- / Header-->
-    <main>
+    <!-- / Top Quote-->
 
         <!-- Secondary Level Container -2- Right Aligned - Facts section-->
         <section class="container-fluid container-wide container-second-section-benefits container--padding300--bottom-sm-middle-md container-callout-light">
@@ -85,8 +94,8 @@
                 <div class="col-12">
                     <div class="row justify-content-start">
                         <div class="col-12 col-md-5">
-                            <a href="#" target="blank">
-                            <h1><i class="fas fa-file-download downloadicon"></i> Download Research</h1>
+                            <a href="assets/pdf/MiSP-Research-Summary-2012.pdf" target="blank">
+                                <h1><i class="fas fa-file-download downloadicon"></i> Download Research</h1>
                             </a>
                         </div>
                     </div>
