Add contact to classes.html

--- a/classes.html
+++ b/classes.html
@@ -64,13 +64,20 @@
                     <h2>Classes in Holmfirth, West Yorkshire</h2>
                 </div>
                 <div class="col-md-6 col-lg-4 text-center container--topbottom20">
-                    <p>Dates</p>
+                    <i class="far fa-calendar-alt iconsizing" aria-hidden="true"></i>
+                    <span class="sr-only">Dates</span>
+                    <p>Every Monday and Wednesday</p>
                 </div>
                 <div class="col-lg-4 text-center d-none d-lg-block">
-                    <p>Times</p>
+                    <i class="far fa-clock iconsizing" aria-hidden="true"></i>
+                    <span class="sr-only">Times</span>
+                    <ul class="list-group">
+                    <li class="list-group-item">3.30pm - 4.15pm (Age 7-9)</li>
+                    <li class="list-group-item">4.30pm - 5.30pm (Age 9-11)</li>
+                    </ul>
                 </div>
                 <div class="col-lg-4 text-center d-none d-lg-block">
-                    <p>Location</p>
+                    map
                 </div>
             </div>
         </section>
