--- a/facts.html
+++ b/facts.html
@@ -95,7 +95,7 @@
                     <div class="row justify-content-start">
                         <div class="col-12 col-md-5">
                             <a href="assets/pdf/MiSP-Research-Summary-2012.pdf" target="blank">
-                                <h1><i class="fas fa-file-download downloadicon"></i> Download Research</h1>
+                                <h1><i class="fas fa-file-download downloadicon" aria-hidden="true"></i> Download Research</h1>
                             </a>
                         </div>
                     </div>
